# CUADC

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CHARTER.md  HIL愿景.md  README.md  config.example.json  flight_log.csv  init愿景.md  meta_development_plan.md  package-lock.json  package.json  pyproject.toml
.agent/: Agent.md  SKILL_REGISTRY.md
.agent/skills/capability-registry/: REGISTRY.md  SKILL.md
.agent/skills/comms-mavlink-rules/: SKILL.md
.agent/skills/config-system-rules/: SKILL.md
.agent/skills/core-fsm-rules/: SKILL.md
.agent/skills/field-editor-rules/: SKILL.md
.agent/skills/field-profile-rules/: SKILL.md
.agent/skills/flight-control-rules/: SKILL.md
.agent/skills/payload-release-rules/: SKILL.md
.agent/skills/safety-monitor-rules/: SKILL.md
.agent/skills/sitl-autodebug-loop/: SKILL.md
.agent/skills/sitl-fullchain-rules/: SKILL.md
.agent/skills/sitl-param-merge-rules/: SKILL.md
.agent/skills/telemetry-rules/: SKILL.md
.agent/skills/testing-rules/: SKILL.md
.agent/skills/utils-rules/: SKILL.md
.agent/skills/vision-interface-rules/: SKILL.md
.claude/: settings.json.GLM5  settings.json.ccproxy  settings.json.ccproxygpt5.4  settings.json.gemini  settings.json.gemini-opus
.claude/commands/: sitl-test.md
.claude/skills/git-commit-style/: SKILL.md
.claude/skills/sitl-autodebug-loop/: SKILL.md
.github/workflows/: ci.yml
data/fields/: README.md
data/fields/sitl_default/: field.json  sitl_merged.param
data/fields/zjg/: field.json  sitl_merged.param
data/fields/zjg2/: field.json  sitl_merged.param
docs/: attack_run_dryrun_report.md  sitl_integration_results.md  sitl_setup.md  user_manual.md  user_manual_testrez.md
docs/archive/: HIL愿景.md  procedural_generation_vision.md  user_manual_testrez.md
docs/archive/snapshot-pre-doc-update-2026-04-25/: CHARTER.md  sitl_setup.md  user_manual.md
openspec/archive/: .openspec.yaml  design.md  tasks.md
openspec/changes/align-web-flight-preview/: design.md  proposal.md
openspec/changes/archive-obsolete-flight-docs/: design.md
openspec/changes/batch-phase3-through-8/: design.md  rewrite_tasks.py
openspec/changes/deploy-readiness/: proposal.md
openspec/changes/deprecate-obsolete-specs/: design.md  proposal.md  tasks.md
pkg/: README.md
scripts/: burn_mission.py  check_pkg_versions.py  lint_registry.py  mock_vision_server.py  preflight_check.py  run_sitl.sh  setup_rpi5.sh  setup_sitl.sh  upload_mission.py
skills/openspec-apply-change/: SKILL.md
src/field_editor/: app.js  config.example.js  index.html  interaction_state.mjs  logic.mjs  styles.css
src/striker/: __init__.py  __main__.py  app.py  exceptions.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_sitl_connection.py  test_sitl_full_mission.py
tests/unit/: test_app_shutdown.py  test_ballistics.py  test_burn_mission.py  test_config.py  test_connection.py  test_converter.py  test_field_editor_export.py  test_field_profile.py  test_flight_controller.py  test_flight_log_analysis.py  test_flight_recorder.py  test_forced_strike_point.py  test_geo.py  test_geofence.py  test_heartbeat.py  test_messages.py  test_mission_geometry.py  test_mission_upload.py  test_optimization_rounds.py  test_platform.py  test_point_in_polygon.py  test_release.py  test_safety.py  test_startup_interrupt.py  test_state_machine.py  test_states.py  test_telemetry.py  test_timing.py  test_tracker.py  test_units.py  test_vision_receiver.py
tests/web/: generate_field_editor_sample.mjs  test_field_editor_interaction_state.mjs  test_field_editor_logic.mjs
(+364 files in other folders)
